# veridian-expanse

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.html  README.md  debug  drift_config.h.in  resources.mk
experiment/: DistributionTable.ipynb  EDT.ipynb  LightField.ipynb  SDF-DCT.ipynb  SDFLinear.ipynb  SDFQuadratic.ipynb  SignedJumpFlooding.ipynb  frame-timing.ipynb
scripts/: build-all.sh  build-cross.sh  build-linux.sh  build-windows.sh  cross.dockerfile  debug-tiles.sh  empty_terrain.sh  init-mingw.sh  itchio.sh  linux.dockerfile  make_vars.sh  mingw-toolchain.cmake  rpi32-toolchain.cmake  rpi64-toolchain.cmake  sdl-win.sh  setup-linux.sh  setup-windows.sh  upload.sh  windows.dockerfile
shaders/: debug_delta.hlsl  debug_lightfield.hlsl  debug_terrain.hlsl  drift_common.hlsl  image_blit.hlsl  light0.hlsl  light1.hlsl  light_blit0.hlsl  light_blit1.hlsl  lighting.hlsl  map_blit.hlsl  nuklear.hlsl  overlay_sprite.hlsl  pause_blit.hlsl  plasma.hlsl  present.hlsl  primitive.hlsl  primitive_linear.hlsl  primitive_overlay.hlsl  resolve.hlsl  shadow0.hlsl  shadow1.hlsl  shadow_mask0.hlsl  shadow_mask1.hlsl  spirv-opt-gl.cfg  sprite.hlsl  sprite_flash.hlsl  sprite_overlay.hlsl  terrain.hlsl  terrain_map.hlsl
src/: drift_constants.h  drift_debug.c  drift_draw.c  drift_draw.h  drift_enemies.c  drift_enemies.h  drift_game.h  drift_game_context.c  drift_game_context.h  drift_hud.c  drift_input.c  drift_input.h  drift_items.c  drift_items.h  drift_net.c  drift_physics.c  drift_physics.h  drift_pickups.c  drift_pickups.h  drift_scan.c  drift_scan.h  drift_script.c  drift_sdf.c  drift_sdf.h  drift_sprite.c  drift_sprite.h  drift_strings.h  drift_strings_en.c  drift_systems.c  drift_systems.h  drift_terrain.c  drift_terrain.h  drift_terrain_gen.c  drift_tools.c  drift_tools.h  drift_ui.c  drift_ui.h  drift_weapons.c
src/base/: drift_app.c  drift_app.h  drift_app_sdl_gl.c  drift_app_sdl_vk.c  drift_audio.c  drift_audio.h  drift_base.h  drift_component.c  drift_component.h  drift_entity.c  drift_entity.h  drift_gfx.c  drift_gfx.h  drift_gfx_internal.h  drift_map.c  drift_map.h  drift_math.c  drift_math.h  drift_mem.c  drift_mem.h  drift_nuklear.c  drift_nuklear.h  drift_rand.c  drift_rand.h  drift_rtree.c  drift_rtree.h  drift_table.c  drift_table.h  drift_types.h  drift_util.c  drift_util.h  main.c
tools/: ldbg.h  packer.c  packer.lua  sounds.lua  strings.lua
